# scClone2DR

./: .gitignore  Dockerfile  Dockerfile.ssh  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
CIViC_analysis/data/civic/2025-04-01/: syntax.md
CIViC_analysis/data/drugs/: 2024-06_drscs_drug_categories.txt
CIViC_analysis/data/oncokb/: readme_cancerGeneList.txt
CIViC_analysis/scripts/: 2025-12-01_gsea_civic_oncokb_genes_melanoma_bulk_baseline_delta_LOR_clusters.qmd  2025-12-01_gsea_civic_oncokb_genes_melanoma_publication_model_delta_LOR_clusters.qmd  2026-01-09_compare_gsea_melanoma_models_delta_LOR_selective.qmd  2026-02-12_compare_gsea_melanoma_models_delta_LOR_selective_dual_bulk.qmd  2026-02-12_gsea_civic_oncokb_genes_melanoma_dual_bulk_delta_LOR_clusters.qmd  get_gene_lists.py  misc.R
notebooks/: generate_fake_data.ipynb  tutorial_scClone2DR.ipynb
notebooks/reproducing_results_paper/drawings_paper/: pipetting_effect.ipynb  plots_overview_figure.ipynb
notebooks/reproducing_results_paper/heatmaps_drug_effect/: effect_for_specific_drug.ipynb
notebooks/reproducing_results_paper/other_experiments/: README.md  scClone2DR_VS_clinical.ipynb
notebooks/reproducing_results_paper/other_experiments/ablation_study/: run.py
notebooks/reproducing_results_paper/other_experiments/paper_results/: Untitled.ipynb  benchmark_models.ipynb  hyperparameter_selection_stability.py  hyperparameters_optim.py  pheno_vs_scatrex.py  running_baselines.py  running_models.py  running_models_RNAonly.py  running_models_temp.py  scatrex_vs_phenograph.ipynb  stability_geneOncoKB.py  stability_scvi_gene.py  visualization_stability.ipynb  (+2 more)
notebooks/reproducing_results_paper/simulatedata_benchmarking/: simu_benchmark.ipynb  simu_obs_pred_gt.ipynb
notebooks/reproducing_results_paper/survival_analysis/: build_design4ordinal_longitudinal.ipynb  trees-fig_paper.ipynb
notebooks/reproducing_results_paper/training_models/: training_models.ipynb
src/scclone2dr/: __init__.py  model.py  pipeline.py  trainer.py  types.py  utils.py
src/scclone2dr/baselines/: __init__.py
src/scclone2dr/data/: __init__.py  basedataset.py  fastdrug.py  realdata.py  rnadata.py  simulateddata.py
src/scclone2dr/inference/: model_evaluator.py  posterior_sampler.py
src/scclone2dr/plots/: __init__.py  visualization.py
(+10 files in other folders)
